fix: overflow anchors in description and position fixed player

--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -11,6 +11,10 @@
   align-items: center;
   justify-content: space-between;
 
+  position: fixed;
+  top: 0;
+  right: 0;
+
   header {
     display: flex;
     align-items: center;
