--- a/src/pages/episodes/episodes.module.scss
+++ b/src/pages/episodes/episodes.module.scss
@@ -79,5 +79,9 @@
     p {
       margin: 1.5rem 0;
     }
+
+    a {
+      overflow-wrap: break-word;
+    }
   }
 }
